--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ docker-data/
 .DS_Store        # macOS
 Thumbs.db        # Windows
 ehthumbs.db      # Windows
+
+*.ipynb linguist-vendored
+RECORD.txt
